--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
    <!-- Convert this to an external style sheet -->
-   <style>
-       main>.container {
-           padding: 60px 15px 0;
-       }
-   </style>
+<link href="/css/site.css">
 </head>
 
 <body>
@@ -49,8 +45,7 @@
 
 <main class="flex-shrink-0">
    <div class="container">
-       <h1 class="mt-5">Template with fixed navbar</h1>
-       <p class="lead">A starter template with a navbar HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+       <h1 class="mt-5">Template with fixed.</p>
    </div>
  </main>
     <!-- Bootstrap JS -->
